# eu4-clone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
crates/app/: Cargo.toml
crates/app/assets/: cities.json  glyph_atlas.json
crates/app/assets/nuts/: NUTS_AT_2024.csv  NUTS_RG_01M_2024_3857_LEVL_3.dbf  NUTS_RG_01M_2024_3857_LEVL_3.shx  nuts3_local.dbf  nuts3_local.shx  release-notes.txt
crates/app/src/: assets.rs  camera.rs  gpu.rs  gpu_timing.rs  labels.rs  lib.rs  perf.rs  renderer.rs  settlements.rs  tiles.rs  ui.rs  world_layer.rs
crates/app/src/passes/: base_heightmap.rs  detail_noise.rs  erosion.rs  image.rs  mod.rs  realm_field.rs  realm_labels.rs  spinner.rs  tile_bake.rs  world_mesh.rs
crates/app/src/shaders/: base_heightmap.wgsl  camera.wgsl  common.wgsl  detail_noise.wgsl  image.wgsl  layer.wgsl  noise.wgsl  realm_field.wgsl  realm_labels.wgsl  spinner.wgsl  terrain.wgsl  tile_bake.wgsl  world.wgsl  world_mesh.wgsl
crates/math/: Cargo.toml
crates/math/src/: lib.rs
script/: _world.py  build-wasm  download-heightmap-tiles  download-medieval-cities  gen-bathymetry  gen-biome-mask  gen-border-sdf  gen-cities  gen-glyph-atlas  gen-heightmap  gen-water-mask  gen-water-sdf  screenshot  serve
script/_screenshot/: package.json  screenshot.mjs
web/: index.html
