[package]
name = "eu4-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# `cities.json` is small enough that pulling in serde_json (≈50-100 KB
# extra wasm) is fine. The alternative — a hand-rolled parser or a custom
# binary format — isn't worth the maintenance.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `webgl` is a wasm32-only feature that compiles in the WebGL2 backend (wgpu-core +
# wgpu-hal/gles). The default `gles` feature only applies to native Linux/Windows/Android/
# Emscripten, NOT browser wasm — a footgun.
wgpu = { version = "29", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
png = "0.17"
# Avoid the heavyweight `image` crate — we only need to decode our own PNG
# heightmap + water mask. `png` is a tiny pure-rust decoder.
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    # `HtmlElement` lets us mutate `.style` for inline colour swatches and
    # dispatch click handlers on UI buttons. `DomTokenList` is what
    # `Element::class_list()` returns — needed to add/remove the
    # `visible` class on the city panel.
    "HtmlElement",
    "DomTokenList",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    # Drawing realm names into an offscreen 2D canvas and reading the pixels
    # back so we can upload them as a GPU texture (see `crate::labels`).
    "CanvasRenderingContext2d",
    "ImageData",
    # `ctx.measure_text(name)` for fitting the font size to each realm's bbox.
    "TextMetrics",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    # Needed to register the wheel listener as non-passive so we can
    # prevent_default() on it (suppresses native page scrolling while zooming).
    "AddEventListenerOptions",
    # `performance.now()` for the spinner overlay's elapsed-time uniform.
    "Performance",
    # Required for fetching assets at runtime.
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
